# ghostwriter-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_REPORT.md  Makefile  PERFORMANCE.md  PERFORMANCE_REPORT.md  QUALITY_INTEGRATION_SUMMARY.md  README.md  SECURITY_PERFORMANCE_REPORT.md  TODO.md  ai.py  ai_enhanced.py  app_config.py  background_tasks.py  book_generator.py  bookprinter.py  cache_manager.py  chapter_validator.py  character_development.py  character_tracker.py  checkpoint_manager.py  cli_handler.py  config.py  containers.py  dead_letter_queue.py  dialogue_enhancer.py  env.example  event_setup.py  events.py  exceptions.py  export_formats.py  fallback_strategies.py  file_operations.py  generate.py  generate_refactored.py  gradio_app.py  gradio_handlers.py  (+39 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  factory.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
providers/tests/: test_base.py
services/: PROMPT_SERVICE_README.md  __init__.py  generation_service.py  prompt_config.py  prompt_service.py  prompt_wrapper.py
services/tests/: test_generation_service.py
spy_thriller_book/: book_metadata.json
templates/: prompts.yaml  prompts_enhanced.yaml
tests/: conftest.py  test_containers.py  test_integration.py  test_token_optimizer_rag.py
tests/unit/: test_generation_service.py  test_prompt_service.py  test_rag_integration.py
